src/style.css
body{
  background-color: rgb(6, 2, 22);
  color: white;
  text-align: center;
  position: relative;
  min-height: 100vh;
}
.container{
  width: 500px;
  height: 50px;
  padding: 10px;
  margin: auto;
  background: transparent;
  display: flex;
  align-items: center;
  justify-content: center;
}
.search-bar{
  background: rgb(184, 186, 213);
  width: 490px;
  display: flex;
  align-items: center;
  border-radius: 10%;
  padding: 5px 20px;
  outline: none;
  border: 2px solid white;
}
.search-bar input{
  background: transparent;
  flex: 1;
  border: 0;
  outline: none;
  padding: 15px 10px;
  font-size: 15px;
  color: rgb(88, 88, 205);
}
::placeholder{
  color: rgb(88, 88, 205);
}
.search-bar button{
  background: rgb(123, 123, 206);
  padding: 10px;
  border: 0;
  border-radius: 30%;
  width: 70px;
  height: 30px;
  outline: none;
  color: rgb(172, 172, 210);
  letter-spacing: 1px;
  cursor: pointer;
}
h1{
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
}
p{
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 20;
}
.explanation{
  display: block;
  width: 50%;
  margin: 0 auto;
  padding: 0.5em;
  place-items: center;
  align-self: center;
}
.main{
  border: 4px;
  padding: 0.5em;
  margin: 0.5em;
}

body::before,
body::after{
  content: '';
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(54, 54, 97);
  z-index: -1;
  clip-path: polygon(0 0, 75% 0, 100% 100%, 25% 100%);
}

